--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "proxy": "http://localhost:5000",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "server": "nodemon server.js",
+    "frontend": "npm start --prefix web",
+    "start": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -10,6 +13,7 @@
     "body-parser": "^1.20.1",
     "color": "^4.2.3",
     "colors": "^1.4.0",
+    "concurrently": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
