--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
     "frontend": "npm start --prefix web",
-    "start": "concurrently \"npm run server\" \"npm run frontend\""
+    "start": "concurrently \"npm run server\" \"npm run frontend\"",
+    "live": "concurrently \"npm run server\" \"npm run frontend\" \"ngrok http --host-header=rewrite 3000\""
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -19,6 +20,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
+    "ngrok": "^4.3.3",
     "nodemon": "^2.0.20"
   }
 }
