--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "ngrok": "^4.3.3",
