--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "ngrok": "^4.3.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uuidv4": "^6.2.13"
   }
 }
