--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "ngrok": "^4.3.3",
     "nodemon": "^2.0.20",
+    "order-id": "^2.1.2",
     "uuidv4": "^6.2.13"
   }
 }
