--- a/web/src/utils/configs.json
+++ b/web/src/utils/configs.json
@@ -2,6 +2,7 @@
     "shop_brand": "Sari PoS",
     "shop_phone": "(02) 7777-777",
     "shop_address": "Manila, Philippines",
+    "tax": 12,
     "active_currency": "₱",
     "currencies": {
         "Philippine Peso": "₱"
@@ -13,6 +14,10 @@
         "powdered_drinks": "Powdered Drinks",
         "packed_goods": "Packed Goods",
         "canned_goods": "Canned Goods",
+        "frozen_goods": "Frozen Goods",
+        "dry_goods": "Dry / Baking Goods",
+        "seasoning": "Seasoning",
+        "sauces": "Sauces",
         "spreads": "Spreads",
         "dairy": "Dairy",
         "bread": "Bread",
@@ -22,6 +27,9 @@
         "stationary": "Stationary",
         "alcohol": "Alcohol",
         "cigars": "Cigarettes",
+        "cleaners": "Cleaners",
+        "personal_care": "Personal Care",
+        "medicine": "Medicine",
         "misc": "Miscellaneous"
     },
     "statuses": {
