--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,16 @@
 {
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js",
-    "frontend": "npm start --prefix web",
-    "start": "concurrently \"npm run server\" \"npm run frontend\"",
-    "live": "concurrently \"npm run server\" \"npm run frontend\" \"ngrok http --host-header=rewrite 3000\""
+    "start": "nodemon server.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.13",
     "body-parser": "^1.20.1",
-    "color": "^4.2.3",
-    "colors": "^1.4.0",
     "concurrently": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "heroku": "^7.66.2",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
@@ -28,5 +19,11 @@
     "nodemon": "^2.0.20",
     "order-id": "^2.1.2",
     "uuidv4": "^6.2.13"
-  }
+  },
+  "name": "saripos-server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
