--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,6 @@
 {
-  
   "name": "web",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -18,11 +16,12 @@
     "react-is": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-to-print": "^2.14.8",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "serve": "^14.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
