--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,12 @@
-client/node_modules
-server/node_modules
+# Node build artifacts
+node_modules
+npm-debug.log
 
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Local development
+*.env
+*.dev
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Docker
+Dockerfile
+docker-compose.yml
