--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "proxy": "http://localhost:5000",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server/server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
