--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "proxy": "http://localhost:5000",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/server.js"
+    "client": "npm start --prefix client",
+    "server": "nodemon server/server.js",
+    "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "body-parser": "^1.20.1",
