added some tiny tweaks

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5000
 HOSTNAME=localhost
+#MONGODB_URI=mongodb+srv://dev_christian:QCOldY2njUDHKEO6@sariposcluster0.nqkurdz.mongodb.net/?retryWrites=true&w=majority
 MONGODB_URI=mongodb://0.0.0.0:27017/saripos
-CLUSTER_PASSWORD=02MZt8dsHfOYCkiC
+CLUSTER_PASSWORD=QCOldY2njUDHKEO6
